--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,7 +1,20 @@
-p {
-    color: brown;
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+main {
+    display: flex;
+    flex-direction: row;
+    flex: auto;
 }
 
-h1 {
-    color: blueviolet;
+article {
+ flex: 2;
+ overflow-y: auto
+}
+
+aside {
+flex: 1;
+overflow-y: auto
 }
